[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeon-runner"
version = "0.1.0"
description = "Dungeon Runner"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pygame-ce>=2.5.6",
]

[project.scripts]
drunner = "drunner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]