# Project metadata and packaging config for Dungeon Runner.

[build-system]
# Tools needed to build the package.
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Package info shown on install and (optionally) PyPI.
name = "dungeon-runner"
version = "0.1.0"
description = "Dungeon Runner"
readme = "README.md"

# Minimum supported Python version.
requires-python = ">=3.11"

# Runtime dependencies installed with the package.
dependencies = [
  "pygame-ce>=2.5.6",
]

[project.scripts]
# Creates the `drunner` command that calls drunner.cli:main
drunner = "drunner.cli:main"

[tool.setuptools]
# Source layout: packages live under /src
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]